[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Enemies/ud_boss_skill_2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemies/ud_boss_skill_6.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemies/ud_boss_skill_7.png" type="Texture" id=3]
[ext_resource path="res://Assets/Enemies/ud_boss_health_back.png" type="Texture" id=4]
[ext_resource path="res://Assets/Enemies/Undead executioner puppet/attack_anim/idle_1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Enemies/ud_boss_skill_4.png" type="Texture" id=6]
[ext_resource path="res://Assets/Enemies/ud_boss_skill_1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Enemies/ud_boss_skill_3.png" type="Texture" id=8]
[ext_resource path="res://Assets/Enemies/ud_boss_skill_5.png" type="Texture" id=9]
[ext_resource path="res://Assets/Enemies/ud_boss_health_front.png" type="Texture" id=10]
[ext_resource path="res://Assets/Enemies/Undead executioner puppet/attack_anim/idle_2.png" type="Texture" id=11]
[ext_resource path="res://Scripts/Boss_scythe.gd" type="Script" id=12]

[sub_resource type="CircleShape2D" id=1]
radius = 156.766

[sub_resource type="CircleShape2D" id=2]
radius = 71.3658

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 505.825, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 23.5038, 34.7035 )

[sub_resource type="Animation" id=5]
length = 2.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("boss_sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 1 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 2 ), ExtResource( 3 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("boss_sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 11 ), ExtResource( 5 ) ]
}

[node name="Boss_scythe" type="KinematicBody2D"]
script = ExtResource( 12 )

[node name="attack_zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_zone"]
shape = SubResource( 1 )

[node name="attack_dmg_zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_dmg_zone"]
shape = SubResource( 2 )

[node name="scythe_attack_zone" type="Area2D" parent="."]
visible = false

[node name="scythe_attack_coll" type="CollisionShape2D" parent="scythe_attack_zone"]
position = Vector2( 506.442, 2.37842 )
shape = SubResource( 3 )

[node name="boss_sprite" type="Sprite" parent="."]
texture = ExtResource( 7 )

[node name="boss_collision" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack_scythe = SubResource( 5 )
anims/idle = SubResource( 6 )

[node name="boss_hp_bar" type="TextureProgress" parent="."]
visible = false
margin_left = -23.0
margin_top = -45.0
margin_right = 23.0
margin_bottom = -40.0
max_value = 0.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scythe_throw_timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_shape_entered" from="attack_zone" to="." method="_on_attack_zone_body_shape_entered"]
[connection signal="body_shape_exited" from="attack_zone" to="." method="_on_attack_zone_body_shape_exited"]
[connection signal="body_shape_entered" from="attack_dmg_zone" to="." method="_on_attack_dmg_zone_body_shape_entered"]
[connection signal="timeout" from="scythe_throw_timer" to="." method="_on_scythe_throw_timer_timeout"]
